Enhance deployment process by adding 404.html generation, updating GitHub Actions workflow, and implementing redirects in the router for better navigation.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,14 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Copy .nojekyll file
-        run: touch dist/.nojekyll
+      - name: Prepare for deployment
+        run: |
+          touch dist/.nojekyll
+          cp dist/index.html dist/404.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
-          branch: gh-pages 
+          branch: gh-pages
+          clean: true 
