--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.6"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "vite": "^4.4.9"
   }
-} 
+}
