--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
     "gh-pages": "^6.3.0",
+    "terser": "^5.39.0",
     "vite": "^4.4.9"
   }
 }
