--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           touch dist/.nojekyll
           cp dist/index.html dist/404.html
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><script>window.location.href = "/lennert-bikes/";</script><meta http-equiv="refresh" content="0; url=/lennert-bikes/"></meta></head><body></body></html>' > dist/index.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
