--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,26 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Prepare for deployment
+      - name: Create required files
         run: |
+          # Create .nojekyll file
           touch dist/.nojekyll
+          
+          # Create 404.html from index.html
           cp dist/index.html dist/404.html
-          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><script>window.location.href = "/lennert-bikes/";</script><meta http-equiv="refresh" content="0; url=/lennert-bikes/"></meta></head><body></body></html>' > dist/index.html
+          
+          # Create a root index.html redirect
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting to Lennert Bikes</title><script>window.location.href = "/lennert-bikes/";</script><meta http-equiv="refresh" content="0; url=/lennert-bikes/"></meta></head><body>If you are not redirected automatically, <a href="/lennert-bikes/">click here</a>.</body></html>' > dist/index.html
+          
+          # Copy 404.html from public if it exists
+          if [ -f "public/404.html" ]; then
+            cp public/404.html dist/404.html
+          fi
+
+      - name: Debug - List files
+        run: |
+          ls -la dist/
+          echo "Deployment files ready"
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
