Refactor GitHub Actions deployment workflow to enhance file creation for GitHub Pages. Update .nojekyll file creation, streamline root redirect handling, and improve 404.html functionality for Single Page Applications. Simplify index.html by removing outdated JavaScript redirect.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,19 +29,21 @@ jobs:
 
       - name: Create required files
         run: |
-          # Create .nojekyll file
+          # Create .nojekyll file to prevent GitHub from ignoring files that begin with an underscore
           touch dist/.nojekyll
           
-          # Create 404.html from index.html
-          cp dist/index.html dist/404.html
-          
-          # Create a root index.html redirect
-          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting to Lennert Bikes</title><script>window.location.href = "/lennert-bikes/";</script><meta http-equiv="refresh" content="0; url=/lennert-bikes/"></meta></head><body>If you are not redirected automatically, <a href="/lennert-bikes/">click here</a>.</body></html>' > dist/index.html
-          
-          # Copy 404.html from public if it exists
+          # Copy the custom 404.html from public if it exists (should be the SPA handler)
           if [ -f "public/404.html" ]; then
             cp public/404.html dist/404.html
           fi
+          
+          # Create a root redirect (for GitHub user page to project page)
+          # Only used when accessing the root GitHub Pages URL without the /lennert-bikes/ path
+          # This should be used in the ROOT of GitHub Pages, not in the dist folder
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting to Lennert Bikes</title><meta http-equiv="refresh" content="0; url=/lennert-bikes/"></meta></head><body>If you are not redirected automatically, <a href="/lennert-bikes/">click here</a>.</body></html>' > index.html
+          
+          # Copy the root redirect to gh-pages branch root (JamesIves action will put this in gh-pages root)
+          cp index.html dist/
 
       - name: Debug - List files
         run: |
