--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           cp public/404.html dist/404.html
           
           # Copy redirector to root
-          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/"></meta></head><body>Redirecting to Lennert Bikes...</body></html>' > dist/root-redirect.html
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/lennert-bikes/"></meta></head><body>Redirecting to Lennert Bikes...</body></html>' > dist/root-redirect.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
